added style for listing section

--- a/_base/templates/listings/creator/landmarks-select.html
+++ b/_base/templates/listings/creator/landmarks-select.html
@@ -13,6 +13,6 @@ id="landmarks-dropdown"
 name="landmark"
 id="landmarks-dropdown"
 >
-    <option value="" disabled selected>No landmarks listed</option>
+    <option value="" disabled selected>None</option>
 </select>
 {% endif %}
