--- a/_base/templates/listings/creator/regions-select.html
+++ b/_base/templates/listings/creator/regions-select.html
@@ -19,7 +19,7 @@ name="region"
 id="regions-dropdown"
 required
 >
-    <option value="" disabled selected>No regions listed</option>
+    <option value="" disabled selected>None</option>
 </select>
 {% endif %}
 
