--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -56,7 +56,7 @@
 
 * {
     font-optical-sizing: auto;
-    font-style: normal;
+    /* font-style: normal; */
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
 }
