--- a/_base/templates/users/creator/dashboard.html
+++ b/_base/templates/users/creator/dashboard.html
@@ -1,5 +1,6 @@
 {% extends 'users/users-base.html' %}
 {% load static %}
+{% load listings_filters %}
 
 {% block section_stylesheets %}
 <link rel="stylesheet" href="{% static 'users/styles/client-dashboard.css' %}">
@@ -44,7 +45,6 @@
         </div>
     </div>
 
-    {% comment %}
     <div class="key-stats-container-mobile">
         <h3>
             <i class="fa-solid fa-chart-simple"></i>
@@ -52,13 +52,11 @@
         </h3>
 
         <ul>
-            <li><i class="fa-solid fa-check-double"></i>Active Subscriptions: {% if active_subscriptions %}{{active_subscriptions.count}}{% else %}0{% endif %}</li>
-            <li><i class="fa-solid fa-check-double"></i>Complete Transactions: {% if complete_transactions %}{{complete_transactions.count}}{% else %}0{% endif %}</li>
-            <li><i class="fa-solid fa-ban"></i>Aborted Transactions: {% if incomplete_transactions %}{{incomplete_transactions.count}}{% else %}0{% endif %}</li>
-            <!-- <li><i class="fa-solid fa-naira-sign"></i> Total Paid: {% if total_paid %}{{total_paid}}{% else %}0{% endif %}</li> -->
+            <li><i class="fa-solid fa-credit-card"></i>Earning: &#8358; {% if user.transfer_profile %}{{user.transfer_profile.balance}}{% else %}0{% endif %}</li>
+            <li><i class="fa-solid fa-house-circle-check"></i>Lodges: {{user.lodges.count}}</li>
+            <li><i class="fa-solid fa-door-open"></i>Vacancy: {{user|count_vacancy}}</li>
         </ul>
     </div>
-    {% endcomment %}
 
     <div class="notifications">
         <h3><i class="fa-solid fa-bell"></i>Notifications</h3>
