--- a/_base/users/static/users/styles/creator-earnings.css
+++ b/_base/users/static/users/styles/creator-earnings.css
@@ -96,6 +96,29 @@
 }
 
 
+
+.basic-form {
+    border-radius: .3rem;
+    display: grid;
+    font-size: var(--smallFontSize);
+    row-gap: .5rem;
+}
+
+.basic-form input {
+    width: 100%;
+    border: 2px solid var(--lightGray);
+    outline: none;
+}
+
+.basic-form button {
+    background-color: var(--slateGray);
+    color: var(--primaryWhite);
+    border: none;
+    padding: .3rem 1rem;
+}
+
+
+
 /* media queries */
 @media screen and (max-width: 450px) {
     .middle-cards-container {
