--- a/_base/templates/listings/lodge-profile.html
+++ b/_base/templates/listings/lodge-profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_stylesheets %}
-<link rel="stylesheet" href="{% static 'listings/styles/lodge-profile.css' %}">
+<link rel="stylesheet" href="{% static 'listings/styles/lodge-profile.css' %}?uuid={{uuid}}">
 {% endblock %}
 
 {% block main %}
@@ -16,7 +16,7 @@
         {% for room_type, form in rooms_dict.items %}
         <div>
             <b>{{ room_type }}</b>
-            <form method="post" action="{% url 'update_room_profile' pk=form.instance.pk %}">
+            <form class="basic-form" method="post" action="{% url 'update_room_profile' pk=form.instance.pk %}">
                 {% csrf_token %}
                 {{ form }}
 
