--- a/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
+++ b/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
@@ -1,11 +1,29 @@
 h1 {
-    font-size: 1.5rem;
-    margin-top: 4rem;
+    font-size: 1rem;
+    padding: 0;
+    margin: 0;
 }
+
+h1 > span {
+    margin-left: .5rem;
+}
+
+body {
+    background-color: var(--backgroundGray);
+}
+
+/* resets */
+.nav {
+    border-bottom: 2px solid var(--lightGray);
+}
+
+/* end resets */
 
 #main {
     display: grid;
-    row-gap: 2rem;
+    row-gap: 1.5rem;
+    padding: 2rem clamp(1rem, 4vw + .3rem, 3rem);
+    background-color: var(--backgroundGray);
 }
 
 .listings-container {
@@ -20,11 +38,12 @@ h1 {
 
 .listing {
     position: relative;
-    background-color: var(--backgroundGray);
+    /* background-color: var(--backgroundGray); */
     max-width: 20rem;
     height: 15rem;
     border-radius: var(--smallBorderRadius);
     box-shadow: var(--slimBoxShadow);
+    background-color: var(--primaryWhite);
 }
 
 .show-listing-info-btn {
@@ -52,6 +71,7 @@ h1 {
     place-items: center;
     width: 100%;
     height: 100%;
+    font-size: 5rem;
 }
 
 .report-occupied-btn {
@@ -95,4 +115,12 @@ h1 {
     margin-top: 3rem;
     display: grid;
     row-gap: 1rem;
+}
+
+.subscriptions-link {
+    color: royalblue;
+    display: flex;
+    align-items: center;
+    column-gap: .5rem;
+    font-size: .8rem;
 }
