--- a/_base/templates/users/client/subscriptions.html
+++ b/_base/templates/users/client/subscriptions.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block middle_content %}
-    <h1>Subscriptions</h1>
+    <h1><i class="fa-solid fa-list-check"></i><span>Subscriptions</span></h1>
 
     <div class="table-wrapper">
         <h3 class="subscription-heading">Active Subscriptions</h3>
@@ -32,7 +32,7 @@
                 {% for subscription in active_subscriptions %}
                 <tr>
                     <td class="longer-row">{{ subscription.created_at|date:"Y-m-d" }}</td>
-                    <td><a href="{% url 'get_subscribed_listings' pk=subscription.pk %}">View All Listings</a></td>
+                    <td><a href="{% url 'get_subscribed_listings' pk=subscription.pk %}">View Listings</a></td>
                     <td>{{ subscription.transaction.amount }}</td>
                     <td class="longer-row">{{ subscription.transaction.regions.all|join:", " }}</td>
                     <td>{{ subscription.subscribed_listings|filter_by_status:"UNVERIFIED" }}</td>
@@ -45,7 +45,7 @@
             </tbody>
         </table>
         {% else %}
-        <b style="margin-left: 1rem;">None</b>
+        <i>No active subscriptions</i>
         {% endif %}
     </div>
     <div class="table-wrapper">
@@ -82,7 +82,7 @@
             </tbody>
         </table>
         {% else %}
-        <b style="margin-left: 1rem;">None</b>
+        <i>No expired subscriptions</i>
         {% endif %}
     </div>
 
