--- a/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
+++ b/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
@@ -32,18 +32,17 @@ body {
     column-gap: 2rem;
     row-gap: 2rem;
     justify-content: center;
-    /* justify-items: center; */
-    /* background-color: aliceblue; */
+    justify-items: center;
 }
 
 .listing {
     position: relative;
     /* background-color: var(--backgroundGray); */
-    max-width: 20rem;
     height: 15rem;
     border-radius: var(--smallBorderRadius);
     box-shadow: var(--slimBoxShadow);
     background-color: var(--primaryWhite);
+    width: min(20rem, 90vw);
 }
 
 .show-listing-info-btn {
@@ -72,6 +71,10 @@ body {
     width: 100%;
     height: 100%;
     font-size: 5rem;
+}
+
+.listing-image i {
+    color: var(--primaryGreen);
 }
 
 .report-occupied-btn {
@@ -123,4 +126,5 @@ body {
     align-items: center;
     column-gap: .5rem;
     font-size: .8rem;
+    width: max-content;
 }
