--- a/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
+++ b/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
@@ -142,6 +142,7 @@ body {
     margin-top: .1rem;
     display: flex;
     column-gap: 5rem;
+    flex-wrap: wrap;
 }
 
 .region-stats-container li {
