made region stats container responsive

--- a/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
+++ b/_base/subscriptions/static/subscriptions/styles/subscribed-listings.css
@@ -141,7 +141,8 @@ body {
     font-size: .7rem;
     margin-top: .1rem;
     display: flex;
-    column-gap: 5rem;
+    column-gap: .5rem;
+    row-gap: .5rem;
     flex-wrap: wrap;
 }
 
