--- a/_base/core/static/core/styles/home/hero.css
+++ b/_base/core/static/core/styles/home/hero.css
@@ -7,13 +7,15 @@
 
     background-color: peachpuff;
 
-    background: url('https://upperoom.s3.amazonaws.com/assets/hero-image.png') no-repeat center;
+    background: url('https://upperoom.s3.amazonaws.com/assets/hero_image_blurred_with_pink+building.png') no-repeat center;
     background-size: cover;
     height: calc(95vh - var(--navHeight));
     max-height: 40rem;
     overflow-x: hidden;
     padding: 4rem 1rem 2rem 1rem;
     overflow-y: hidden;
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
 }
 
 /* messages */
